--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/CodeCoreYVR/fotorol-sept-2017/issues"
   },
-  "homepage": "https://github.com/CodeCoreYVR/fotorol-sept-2017#readme"
+  "homepage": "https://github.com/CodeCoreYVR/fotorol-sept-2017#readme",
+  "dependencies": {
+    "express": "^4.16.1"
+  }
 }
