--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/CodeCoreYVR/fotorol-sept-2017#readme",
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
