--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/CodeCoreYVR/fotorol-sept-2017#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.1",
     "morgan": "^1.9.0"
   },
