--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.1",
     "knex": "^0.13.0",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "pg": "^7.3.0"
   },
   "devDependencies": {
