--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "repl": "nodemon --inspect=9222 repl.js",
     "db:create": "createdb --echo fotorol_dev",
     "db:drop": "dropdb --echo --if-exists fotorol_dev",
-    "db:migrate": "knex migrate:latest"
+    "db:migrate": "knex migrate:latest",
+    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate"
   },
   "repository": {
     "type": "git",
@@ -28,9 +29,12 @@
   },
   "homepage": "https://github.com/CodeCoreYVR/fotorol-sept-2017#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "connect-session-knex": "^1.4.0",
     "ejs": "^2.5.7",
     "express": "^4.16.1",
+    "express-session": "^1.15.6",
     "knex": "^0.13.0",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
