--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.1",
+    "express-session": "^1.15.6",
     "knex": "^0.13.0",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
