--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.1",
     "express-session": "^1.15.6",
+    "flash": "^1.1.0",
     "knex": "^0.13.0",
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
